--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
   <title>Hogwarts</title>
 </head>
 <body>
-<button class="btn btn-danger">jasdf</button>
+  <div id="nav-container"></div>
 </body>
 </html>
