--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div id="nav-container"></div>
+  <div id="button-container"></div>
   <div id="student-container"></div>
 </body>
 </html>
